--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
                         <strong>9:30 AM</strong>
                       </td>
                       <td>
-                        <!--<div class="tag">Workshop</div>-->
-                        <br> Talks and Workshops
+                        <div class="tag">Talk</div>
+                         <br>Will be revealed soon
                        <!--- <div class="subtitle">by Kayvon Tehranian</div>-->
                       </td>
                     </tr>
@@ -401,7 +401,7 @@
                       </td>
                       <td>
                         <!--<div class="tag">talk</div>-->
-                        <br>Lunch
+                        Lunch
                         <!--<div class="subtitle">by Nadav Hollander</div>-->
                       </td>
                     </tr>
@@ -413,11 +413,11 @@
                         <p class="schedule-time noon"></p>
                       </td>
                       <td>
-                        <strong>2:00 PM</strong>
+                        <strong>2:30 PM</strong>
                       </td>
                       <td>
-                        <!--<div class="tag">talk</div>-->
-                        <br>Talks and Workshops Continues..
+                        <div class="tag">Talks</div>
+                        <br> Will be revealed soon
                         <!--<div class="subtitle">by Sean Brennan</div>-->
                       </td>
                     </tr>
@@ -431,7 +431,7 @@
                       </td>
                       <td>
                         <!--<div class="tag">talk</div>-->
-                        <br> Coffee and Snacks
+                         Coffee and Snacks
                         <!--<div class="subtitle">by Dr. Michael Egorov</div>-->
                       </td>
                     </tr>
@@ -444,8 +444,8 @@
                         <strong>5:30 PM</strong>
                       </td>
                       <td>
-                        <!--<div class="tag">workshop</div>-->
-                        <br>Design Sprint Workshop
+                        <div class="tag">workshop</div>
+                          <br> Design Sprint 
                         <!--<div class="subtitle">by Andy Tudhope</div>-->
                       </td>
                     </tr>
@@ -471,7 +471,7 @@
                       </td>
                       <td>
                         <!--<div class="tag">talk</div>-->
-                        <br>Dinner
+                        Dinner
                         <!--<div class="subtitle">by Jack Platts</div>-->
                       </td>
                     </tr>
@@ -484,8 +484,8 @@
                         <strong>9:30 PM</strong>
                       </td>
                       <td>
-                        <!--<div class="tag">workshop</div>-->
-                        <br> SprintDay Continues..
+                       <div class="tag">workshop</div>
+                          <br>SprintDay 
                         <!--<div class="subtitle">by Sean Brennan</div>-->
                       </td>
                     </tr>
@@ -643,7 +643,9 @@
                       <td>
                         <strong>8:30 AM</strong>
                       </td>
-                      <td>Sprintday Continues..</td>
+                      <td>
+                        <div class="tag">Workshops</div>
+                        <br>Sprintday </td>
                     </tr>
 
                     <!-- <tr>
@@ -676,7 +678,7 @@
                       </td>
                       <td>
                         <!--<div class="tag">talk</div>-->
-                        <br>Lunch
+                         Lunch
                         <!--<div class="subtitle">by Augusto Lemble</div>-->
                       </td>
                     </tr>
