updated speakers section, changes made to event section also.

--- a/index.html
+++ b/index.html
@@ -930,6 +930,7 @@
     </div>
 </div>
 </div>  
+
 <!--SPEAKER-->
     <section id="speakers" class="grd-11">
 
@@ -946,63 +947,21 @@
             <div class="row no-gutters">
 
                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/biswal/" target="_blank">
+                    <a href="https://www.linkedin.com/in/aravindputrevu/" target="_blank">
                         <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/prashant.jpg" alt="Prashant Biswal">
+                            <img class="speaker-card-img-top" src="img/Aravind Putrevu.jpg" alt="Prashant Biswal">
                             <div class="speaker-card-body">
                                 <div class="speaker-card-header">
-                                    <h5>Prashant Biswal</h5>
-                                    <p class="text-faded">Evangelist &amp;
-                                        <br />Startup Odisha</p>
+                                    <h5>Aravind Putrevu</h5>
+                                    <p class="text-faded">Engineer,<br />Sr.Developer Advocate<br />Elastic
+                                      </p>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
 
-                <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/swostimishra/" target="_blank">
-                        <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/swosti.jpg" alt="Swosti Mishra">
-                            <div class="speaker-card-body">
-                                <div class="speaker-card-header">
-                                    <h5>Swosti Mishra</h5>
-                                    <p class="text-faded">Executive Director
-                                        <br />TiE Bhubaneswar</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/nirmalhota/" target="_blank">
-                        <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/nirmal.jpg" alt="Nirmal Hota">
-                            <div class="speaker-card-body">
-                                <div class="speaker-card-header">
-                                    <h5>Nirmal Hota</h5>
-                                    <p class="text-faded">Project Lead
-                                        <br />Mindfire Solutions</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/taditdash/" target="_blank">
-                        <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/tadit.jpg" alt="Tadit Dash">
-                            <div class="speaker-card-body">
-                                <div class="speaker-card-header">
-                                    <h5>Tadit Dash</h5>
-                                    <p class="text-faded">Microsoft MVP, TedX Speaker
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                
 
                 <div class="col-xl-2 col-md-3 col-sm-4 col-6">
                     <a href="https://www.linkedin.com/in/surya-narayan-barik-15961a8b/" target="_blank">
@@ -1020,80 +979,25 @@
                 </div>
 
                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/karan-shaw/" target="_blank">
+                    <a href="https://www.linkedin.com/in/withshubh/" target="_blank">
                         <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/karan.jpg" alt="Karan Shaw">
+                            <img class="speaker-card-img-top" src="img/Shubhendra Singh Chauhan.jpg" alt="Karan Shaw">
                             <div class="speaker-card-body">
                                 <div class="speaker-card-header">
-                                    <h5>Karan Shaw</h5>
-                                    <p class="text-faded">CTO
-                                        <br />WhatsurSkill</p>
+                                    <h6>Shubhendra Singh Chauhan
+                                    </h6>
+                                    <p class="text-faded" >
+                                     Mozilla Rep,<br/>GitHub Campus Expert</p> 
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
 
-                <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="" target="_blank">
-                        <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/jayanti.jpg" alt="Jayanti Mohapatra">
-                            <div class="speaker-card-body">
-                                <div class="speaker-card-header">
-                                    <h5>Jayanti Mohapatra</h5>
-                                    <p class="text-faded">Founder
-                                        <br />Manikasthu Pvt Ltd.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+               
 
-                <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/rashmiranjansahu/" target="_blank">
-                        <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/rashmi.png" alt="Rashmi Ranjan Sahoo">
-                            <div class="speaker-card-body">
-                                <div class="speaker-card-header">
-                                    <h5>Rashmi Ranjan Sahoo</h5>
-                                    <p class="text-faded">Sr. Mission Associate
-                                        <br />Startup Odisha</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/priyabrata-pati/" target="_blank">
-                        <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/priyabrata.jpg" alt="Priyabrata Pati">
-                            <div class="speaker-card-body">
-                                <div class="speaker-card-header">
-                                    <h5>Priyabrata Pati</h5>
-                                    <p class="text-faded">Software Engineer
-                                        <br />Kare4U Healthcare</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/aftabalam8028/" target="_blank">
-                        <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/aftab.jpeg" alt="Aftab Alam">
-                            <div class="speaker-card-body">
-                                <div class="speaker-card-header">
-                                    <h5>Aftab Alam</h5>
-                                    <p class="text-faded">Associate Lead
-                                        <br />Mindfire Solutions</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
+<!-- 
                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
                     <a href="https://www.linkedin.com/in/batabyalsunny/" target="_blank">
                         <div class="speaker-card">
@@ -1107,7 +1011,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
 
             </div>
     </section>
