--- a/index.html
+++ b/index.html
@@ -106,22 +106,14 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" title="About" href="#about">ABOUT</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" title="howitworks" href="#howitworks">REGISTRATION
-                            PROCESS</a>
-                    </li>
+                    
                      <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" title="Schedule" href="#schedule">SCHEDULE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" title="Speakers" href="#speakers">SPEAKER</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" title="Sponsors" href="#sponsors">SPONSORS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" title="Wiki" href="#wiki">WIKI</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" title="faq" href="#faq">FAQ</a>
                     </li>
@@ -953,7 +945,7 @@
                             <div class="speaker-card-body">
                                 <div class="speaker-card-header">
                                     <h5>Aravind Putrevu</h5>
-                                    <p class="text-faded">Engineer,<br />Sr.Developer Advocate<br />Elastic
+                                    <p class="text-faded">Sr.Developer Advocate<br />Elastic
                                       </p>
                                 </div>
                             </div>
