--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <img class="img-fluid" src="./img/texts/speakers & Mentors.png">
+                    <img class="img-fluid" src="./img/texts/speaker & judges.png">
                     <!--<h2 class="section-heading">Our Past Speakers & Mentors</h2>-->
                 </div>
             </div>
