updates to events section

--- a/index.html
+++ b/index.html
@@ -886,16 +886,16 @@
          <div class="event-card">
              <img src="img/assests/think design print poster.jpg" alt="" style="width: 100%;">
              <div class="event-container">
-                 <h4><strong>Design Sprint</strong> </h4>
+                 <h4><strong>Think Design</strong> </h4>
                  <!-- <button class="event-apply-btn"><a href="http://bit.ly/thinkdesign2" target="_blank" style="color: #fff;">apply now</a></button> -->
-                 <a href="http://bit.ly/thinkdesign2" target="_blank" style="color: #fff;" ><button class="event-apply-btn">Register now</button></a>
+                 <a href="http://resources.emsiha.community" target="_blank" style="color: #fff;" ><button class="event-apply-btn">Get Resources</button></a>
              </div>
          </div>
          <div class="event-card">
-            <img src="img/assests/comingsoon.png" alt="" class="coming-soon-img" style="width: 100%;">
+            <img src="img/assests/HackWeeks2 poster.jpg" alt="" class="" style="width: 100%;">
             <div class="event-container">
                 <h4><strong>Frontend Day</strong> </h4>    
-                <a href="http://bit.ly/thinkdesign2" target="_blank" style="color: #fff;" ><button disabled class="event-apply-btn">Coming soon!</button></a>
+                <a href="https://forms.gle/3WsnTMW31ZSZ97RC6" target="_blank" style="color: #fff;" ><button disabled class="event-apply-btn">Register Now</button></a>
             </div>
         </div>
         <div class="event-card">
