added icons section

--- a/index.html
+++ b/index.html
@@ -1491,69 +1491,52 @@
         </div>
     </section>
 
+<!--* social-media section    -->
+<div class="media-wrapper">
+  <div class="flex-container">
+  
+       <a class="b-1 tw-h" href="https://twitter.com/emishacommunity"  target="_blank" rel="noopener"
+        style="cursor: pointer;">
+       <div class="link-container " >
+         <i class="fab fa-twitter fa-2x media-icons" ></i>
+       </div>
+   </a>
 
+   <a class="b-2 tl-h" href="https://t.me/emishacommunity" target="_blank" rel="noopener" >
+     <div class="link-container  " >
+       <i class="fab fa-telegram-plane fa-2x"></i>
+     </div>
+ </a>
+ 
+ 
+<a class="b-3 i-h" href="https://www.instagram.com/emishacommunity/" target="_blank" rel="noopener">
+  <div class="link-container ">
+    <i class="fab fa-instagram fa-2x"></i>
+  </div>
+</a>
+ </div>
+ <div class="flex-container">
+   
+ <a class="b-4 link-h" href="https://www.linkedin.com/company/emisha" target="_blank" rel="noopener">
+   <div class="link-container  " >
+     <i class="fab fa-linkedin fa-2x"></i>
+   </div>
+</a>
+   
+ <a class="b-5 md-h" href="https://medium.com/emishacommunity" target="_blank" rel="noopener" >
+   <div class="link-container "  >
+     <i class="fab fa-medium-m fa-2x"></i>
+   </div>
+</a>
 
-    <section class="footer grd-8">
-
-        <div class="container">
-            <div class="row d-flex align-items-center">
-
-
-                <div class="col-md-6 col-lg-2 text-center text-md-left">
-                    <h6 class="white-text">
-                        <a href="code-of-conduct/index.html">Code of Conduct</a>
-                    </h6>
-                </div>
-                <div class="col-lg-6 circle">
-                    <div id='ripple'></div>
-                </div>
-                <div class="col-md-6 col-lg-4 text-center text-md-right">
-                    <!--Facebook-->
-                    <a href="https://www.facebook.com/emishacommunity/" target="_blank" rel="noopener"
-                        title="Emisha Facebook">
-                        <span class="social-icons icon-facebook"> </span>
-                    </a>
-                    <!--Twitter-->
-                    <a href="https://twitter.com/emishacommunity" target="_blank" rel="noopener" title="Emisha Twitter">
-                        <span class="social-icons icon-twitter"> </span>
-                    </a>
-                    <!--Medium-->
-                    <a href="https://medium.com/emishacommunity" target="_blank" rel="noopener" title="Emisha Medium">
-                        <span class="social-icons icon-medium"> </span>
-                    </a>
-                    <!--Linkedin +-->
-                    <a href="https://www.linkedin.com/company/emisha" target="_blank" rel="noopener"
-                        title="Emisha LinkedIn">
-                        <span class="social-icons icon-linkedin"> </span>
-                    </a>
-                    <!--Instagram-->
-                    <a href="https://www.instagram.com/emishacommunity/" target="_blank" rel="noopener"
-                        title="Emisha Instagram">
-                        <span class="social-icons icon-instagram"> </span>
-                    </a>
-                    <!-- Telegram -->
-                    <a href="https://t.me/emishacommunity" target="_blank" rel="noopener" title="Emisha Telegram">
-                        <span class="social-icons icon-telegram"> </span>
-                    </a>
-
-                </div>
-                <!--Grid column-->
-            </div>
-            <!--Grid row-->
-
-        </div>
-    </section>
-
-    <!-- <section class="nw-section">
-        <div style="height: 200px;">
-            <i class="fa fa-quote-left fa-3x left-quote" aria-hidden="true"></i>
-            <h1 class="head-quote" style="text-align: center; font-size:3rem; padding-bottom: 1rem;" class="quoted">
-                <span style="color: #f19d01;">Codes</span>
-                can fail, but <span style="color: #f19d01;">Dreams</span>
-                Don't</h1>
-            <p class="anoynamous-writer" style="">- Anoynamous</p>
-            <i class="fa fa-quote-right fa-3x right-quote" aria-hidden="true"></i>
-        </div> -->
+<a class="b-6 fb-h" href="https://www.facebook.com/emishacommunity/" target="_blank" rel="noopener">
+  <div class="link-container  " >
+    <i class="fab fa-facebook-square fa-2x"></i>
+  </div>
+</a>
+ </div>
+</div>
+<!--* social-media section end   -->
 
         <div class="container grd-9">
             <div class="row">
@@ -1569,8 +1552,59 @@
         <div class="grd-10">
           <img src="img/assests/website-footer.svg" alt="moon-footer" style="padding-top: 0px;">
         </div>
-        
+       
+   
 
+        <section class="footer grd-8">
+
+          <div class="container">
+              <div class="row d-flex align-items-center">
+  
+  
+                  <div class="col-md-6 col-lg-2 text-center text-md-left">
+                      <h6 class="white-text">
+                          <a href="code-of-conduct/index.html">Code of Conduct</a>
+                      </h6>
+                  </div>
+                  <div class="col-lg-6 circle">
+                      <div id='ripple'></div>
+                  </div>
+                  <div class="col-md-6 col-lg-4 text-center text-md-right">
+                      <!--Facebook-->
+                      <a href="https://www.facebook.com/emishacommunity/" target="_blank" rel="noopener"
+                          title="Emisha Facebook">
+                          <span class="social-icons icon-facebook"> </span>
+                      </a>
+                      <!--Twitter-->
+                      <a href="https://twitter.com/emishacommunity" target="_blank" rel="noopener" title="Emisha Twitter">
+                          <span class="social-icons icon-twitter"> </span>
+                      </a>
+                      <!--Medium-->
+                      <a href="https://medium.com/emishacommunity" target="_blank" rel="noopener" title="Emisha Medium">
+                          <span class="social-icons icon-medium"> </span>
+                      </a>
+                      <!--Linkedin +-->
+                      <a href="https://www.linkedin.com/company/emisha" target="_blank" rel="noopener"
+                          title="Emisha LinkedIn">
+                          <span class="social-icons icon-linkedin"> </span>
+                      </a>
+                      <!--Instagram-->
+                      <a href="https://www.instagram.com/emishacommunity/" target="_blank" rel="noopener"
+                          title="Emisha Instagram">
+                          <span class="social-icons icon-instagram"> </span>
+                      </a>
+                      <!-- Telegram -->
+                      <a href="https://t.me/emishacommunity" target="_blank" rel="noopener" title="Emisha Telegram">
+                          <span class="social-icons icon-telegram"> </span>
+                      </a>
+  
+                  </div>
+                  <!--Grid column-->
+              </div>
+              <!--Grid row-->
+  
+          </div>
+      </section>
 
 
     <!-- </section> -->
