events text updated

--- a/index.html
+++ b/index.html
@@ -873,8 +873,8 @@
 
 <div class="grd-12">
   <div class="container ">
-
-   <h1 style="text-align: center;" class="event-heading">Events</h1>
+    <img class="img-fluid" src="./img/texts/events.png">
+   <!--<h1 style="text-align: center;" class="event-heading">Events</h1>-->
 
     <div class="glider-contain multiple">
       
