events heading position centered

--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
 
 <div class="grd-12">
   <div class="container ">
-    <img class="img-fluid" src="./img/texts/events.png">
+    <img class="img-fluid event-heading-text" src="./img/texts/events.png">
    <!--<h1 style="text-align: center;" class="event-heading">Events</h1>-->
 
     <div class="glider-contain multiple">
