--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" title="Speakers" href="#speakers">SPEAKER</a>
                     </li>
-                    
+                      
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger" title="Events" href="#events">EVENTS</a>
+                  </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" title="faq" href="#faq">FAQ</a>
                     </li>
@@ -871,7 +874,7 @@
   </section>
 
 
-<div class="grd-12">
+<div class="grd-12" id="events">
   <div class="container ">
     <img class="img-fluid event-heading-text" src="./img/texts/events.png">
    <!--<h1 style="text-align: center;" class="event-heading">Events</h1>-->
