fixed gradient and social icons centered

--- a/index.html
+++ b/index.html
@@ -1495,26 +1495,27 @@
     </section>
 
 <!--* social-media section    -->
-<div class="media-wrapper">
+
+<div class="media-wrapper grd-13">
   <div class="flex-container">
   
        <a class="b-1 tw-h" href="https://twitter.com/emishacommunity"  target="_blank" rel="noopener"
         style="cursor: pointer;">
        <div class="link-container " >
-         <i class="fab fa-twitter fa-2x media-icons" ></i>
+         <i class="fab fa-twitter fa-2x media-icons" style="margin-top: 12px;" ></i>
        </div>
    </a>
 
    <a class="b-2 tl-h" href="https://t.me/emishacommunity" target="_blank" rel="noopener" >
      <div class="link-container  " >
-       <i class="fab fa-telegram-plane fa-2x"></i>
+       <i class="fab fa-telegram-plane fa-2x" style="margin-top: 12px;"></i>
      </div>
  </a>
  
  
 <a class="b-3 i-h" href="https://www.instagram.com/emishacommunity/" target="_blank" rel="noopener">
   <div class="link-container ">
-    <i class="fab fa-instagram fa-2x"></i>
+    <i class="fab fa-instagram fa-2x" style="margin-top: 12px;"></i>
   </div>
 </a>
  </div>
@@ -1522,23 +1523,24 @@
    
  <a class="b-4 link-h" href="https://www.linkedin.com/company/emisha" target="_blank" rel="noopener">
    <div class="link-container  " >
-     <i class="fab fa-linkedin fa-2x"></i>
+     <i class="fab fa-linkedin fa-2x" style="margin-top: 12px;"></i>
    </div>
 </a>
    
  <a class="b-5 md-h" href="https://medium.com/emishacommunity" target="_blank" rel="noopener" >
    <div class="link-container "  >
-     <i class="fab fa-medium-m fa-2x"></i>
+     <i class="fab fa-medium-m fa-2x" style="margin-top: 12px;"></i>
    </div>
 </a>
 
 <a class="b-6 fb-h" href="https://www.facebook.com/emishacommunity/" target="_blank" rel="noopener">
   <div class="link-container  " >
-    <i class="fab fa-facebook-square fa-2x"></i>
+    <i class="fab fa-facebook-square fa-2x" style="margin-top: 12px;"></i>
   </div>
 </a>
  </div>
 </div>
+
 <!--* social-media section end   -->
 
         <div class="container grd-9">
@@ -1562,46 +1564,16 @@
 
           <div class="container">
               <div class="row d-flex align-items-center">
-  
-  
                   <div class="col-md-6 col-lg-2 text-center text-md-left">
                       <h6 class="white-text">
                           <a href="code-of-conduct/index.html">Code of Conduct</a>
                       </h6>
                   </div>
-                  <div class="col-lg-6 circle">
-                      <div id='ripple'></div>
+                  
+                  <div class="col-md-4">
+                    <img class="black-emisha-logo  " src="img/assests/BlackEmisha-logo.png" alt="emishacommunity">
                   </div>
-                  <div class="col-md-6 col-lg-4 text-center text-md-right">
-                      <!--Facebook-->
-                      <a href="https://www.facebook.com/emishacommunity/" target="_blank" rel="noopener"
-                          title="Emisha Facebook">
-                          <span class="social-icons icon-facebook"> </span>
-                      </a>
-                      <!--Twitter-->
-                      <a href="https://twitter.com/emishacommunity" target="_blank" rel="noopener" title="Emisha Twitter">
-                          <span class="social-icons icon-twitter"> </span>
-                      </a>
-                      <!--Medium-->
-                      <a href="https://medium.com/emishacommunity" target="_blank" rel="noopener" title="Emisha Medium">
-                          <span class="social-icons icon-medium"> </span>
-                      </a>
-                      <!--Linkedin +-->
-                      <a href="https://www.linkedin.com/company/emisha" target="_blank" rel="noopener"
-                          title="Emisha LinkedIn">
-                          <span class="social-icons icon-linkedin"> </span>
-                      </a>
-                      <!--Instagram-->
-                      <a href="https://www.instagram.com/emishacommunity/" target="_blank" rel="noopener"
-                          title="Emisha Instagram">
-                          <span class="social-icons icon-instagram"> </span>
-                      </a>
-                      <!-- Telegram -->
-                      <a href="https://t.me/emishacommunity" target="_blank" rel="noopener" title="Emisha Telegram">
-                          <span class="social-icons icon-telegram"> </span>
-                      </a>
-  
-                  </div>
+                 
                   <!--Grid column-->
               </div>
               <!--Grid row-->
