--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
                         <p class="schedule-time morning"></p>
                       </td>
                       <td>
-                        <strong>8:00 AM</strong>
+                        <strong>8:30 AM</strong>
                       </td>
                       <td>
-                        Check-In and Breakfast
+                        Check-In
                       </td>
                     </tr>
 
