changed width size of prie button in prize section

--- a/prizes.html
+++ b/prizes.html
@@ -109,10 +109,9 @@
                 </div>
                 <div class="col-lg-12" style="margin-top: 2.5rem !important">
                     <p class="text-faded"></p>
-                    <button id="devfolio-apply-now"><i class="fa fa-trophy prize-logo "></i><strong
-                            class="view-prize-text"><a class="js-scroll-trigger" href="#first-prize"></a> View
-                            Prizes</strong>
-                    </button>
+                    <button id="prizes-button"><i class="fa fa-trophy prize-logo "></i>
+                        View Prizes
+                  </button>
                 </div>
             </div>
         </div>
