changes prizes section text

--- a/prizes.html
+++ b/prizes.html
@@ -103,8 +103,8 @@
                 </div>
                 <div class="col-lg-12 mt-3">
                     <p class="text-faded" style="line-height: 1.8;">
-                        <h5>It's Not Just a Hackathon
-                            <br>Innovate,Develop And Win Exciting Prizes!
+                        <h5>It's not Just a Hackathon
+                            <br>Innovate, Develop and Win Exciting Prizes!
                         </h5>
                 </div>
                 <div class="col-lg-12" style="margin-top: 2.5rem !important">
