added new speaker

--- a/index.html
+++ b/index.html
@@ -980,15 +980,15 @@
                 </div>
 
                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/withshubh/" target="_blank">
+                    <a href="https://www.linkedin.com/in/nirmalhota/" target="_blank">
                         <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/Shubhendra Singh Chauhan.jpg" alt="Karan Shaw">
+                            <img class="speaker-card-img-top" src="img/nirmal.jpg" alt="nirmal hota">
                             <div class="speaker-card-body">
                                 <div class="speaker-card-header">
-                                    <h6>Shubhendra Singh Chauhan
+                                    <h6>Nirmal Hota
                                     </h6>
                                     <p class="text-faded" >
-                                     Mozilla Rep,<br/>GitHub Campus Expert</p> 
+                                      Full Stack Develope<br/>Mindfire Solutions</p> 
                                     </p>
                                 </div>
                             </div>
@@ -996,7 +996,7 @@
                     </a>
                 </div>
 
-               
+              
 
 <!-- 
                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
