dissabled typing animation

--- a/prizes.html
+++ b/prizes.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/main.min.css">
-    <title>Document</title>
+    <title>UtkalHacks 2.0| 31st January - 2nd February, 2020</title>
 </head>
 
 <body id="page-top">
