--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                 <div class="col-lg-12">
                     <h1>
                         <strong>Odisha's Biggest </h1> </strong>
-                    <div class="typewriter">
+                    <div > 
+                      <!-- /*class="typewriter"*/ -->
                         <strong>
                             <h1>Hackathon </h1>
                         </strong>
