changed prize content and changed nirmal hota specification

--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
                                     <h6>Nirmal Hota
                                     </h6>
                                     <p class="text-faded" >
-                                      Full Stack Develope<br/>Mindfire Solutions</p> 
+                                      Project Lead<br/>Mindfire Solutions</p> 
                                     </p>
                                 </div>
                             </div>
