changed media queries margin

--- a/index.html
+++ b/index.html
@@ -1823,7 +1823,7 @@
         }
     </script>
 
-    <!-- Bootstrap core JavaScript -->
+    <!-- *Bootstrap core JavaScript -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -1926,6 +1926,7 @@
             <img src="img/elastic.png" alt="Elastic logo"></img>
           </a>
         </div>
+        
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://matic.network/" target="_blank">
             <img src="img/Matic.svg" alt="Matic logo"></img>
