--- a/index.html
+++ b/index.html
@@ -1952,7 +1952,11 @@
             <img src="img/todoist.svg" alt="Todoist logo"></img>
           </a>
         </div>
-       
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://d2c.io/" target="_blank">
+            <img src="img/d2c.png" alt="D2C logo"></img>
+          </a>
+        </div>
         <!--
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.mongodb.com/" target="_blank">
