--- a/index.html
+++ b/index.html
@@ -997,7 +997,20 @@
                     </a>
                 </div>
 
-              
+                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+                  <a href="https://www.linkedin.com/in/abhijitpanigrahi/" target="_blank">
+                      <div class="speaker-card">
+                          <img class="speaker-card-img-top" src="img/Abhijit_Panigrahi.jpg" alt="Abhijit Panigrahi">
+                          <div class="speaker-card-body">
+                              <div class="speaker-card-header">
+                                  <h5>Abhijit Panigrahi</h5>
+                                  <p class="text-faded">Chief Mentor
+                                      <br />Invincix Solutions</p>
+                              </div>
+                          </div>
+                      </div>
+                  </a>
+              </div>
 
 <!-- 
                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
