--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
             <img src="img/assests/HackWeeks2 poster.jpg" alt="" class="" style="width: 100%;">
             <div class="event-container">
                 <h4><strong>Frontend Day</strong> </h4>    
-                <a href="https://forms.gle/3WsnTMW31ZSZ97RC6" target="_blank" style="color: #fff;" ><button class="event-apply-btn">Register Now</button></a>
+                <a href="http://resources.emsiha.community" target="_blank" style="color: #fff;" ><button class="event-apply-btn">Get Resources</button></a>
             </div>
         </div>
         <div class="event-card">
