add linode logo and added linode in the prize content

--- a/index.html
+++ b/index.html
@@ -1960,14 +1960,20 @@
             <img src="img/yuvavc.png" alt="Yuva Fund logo"></img>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
-          <a href="https://todoist.com/" target="_blank">
-            <img src="img/todoist.svg" alt="Todoist logo"></img>
-          </a>
-        </div>
+       
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://d2c.io/" target="_blank">
             <img src="img/d2c.png" alt="D2C logo"></img>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://www.linode.com/" target="_blank">
+            <img src="img/linode-logo-white-01.png" alt="linode logo"></img>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://todoist.com/" target="_blank">
+            <img src="img/todoist.svg" alt="Todoist logo"></img>
           </a>
         </div>
         <!--
