updated harshil specifications

--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                           <div class="speaker-card-body">
                               <div class="speaker-card-header">
                                   <h5>Harshil Agarwal</h5>
-                                  <p class="text-faded">Sr.Developer Advocate<br />Elastic
+                                  <p class="text-faded">GitHub Campus Expert<br />Github
                                     </p>
                               </div>
                           </div>
