added 3box.io logo

--- a/index.html
+++ b/index.html
@@ -1985,6 +1985,11 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://3box.io/" target="_blank">
+            <img src="img/3box.png" alt="3box logo"></img>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://matic.network/" target="_blank">
             <img src="img/Matic.svg" alt="Matic logo"></img>
           </a>
