--- a/index.html
+++ b/index.html
@@ -1983,6 +1983,10 @@
           <a href="https://www.pratilipi.com/" target="_blank">
             <img src="img/pratilipi.png" alt="pratilipi logo"></img>
           </a>
+        </div> <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://status.im/" target="_blank">
+            <img src="img/status.png" alt="status logo"></img>
+          </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://3box.io/" target="_blank">
@@ -1997,6 +2001,11 @@
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://twist.com/" target="_blank">
             <img src="img/twist.svg" alt="Twist logo"></img>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://divjoy.com/" target="_blank">
+            <img src="img/divjoy.png" alt="divjoy logo"></img>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
