changed topo of prize section

--- a/prizes.html
+++ b/prizes.html
@@ -151,7 +151,7 @@
             </h1> -->
             <div>
               <strong>
-                <h2>Fuel For Your</h2>
+                <h2>Fuel for Your</h2>
                 <h1>Moonshot Idea! 💸</h1>
               </strong>
             </div>
