changed prize heading moonshot color

--- a/prizes.html
+++ b/prizes.html
@@ -152,7 +152,11 @@
             <div>
               <strong>
                 <h2>Fuel for Your</h2>
-                <h1>Moonshot Idea! 💸</h1>
+                <div>
+                  <h1>
+                    <span style="color: orange;"> Moonshot</span> Idea! 💸
+                  </h1>
+                </div>
               </strong>
             </div>
           </div>
