new speaker added

--- a/index.html
+++ b/index.html
@@ -1002,17 +1002,33 @@
                 <div class="col-xl-2 col-md-3 col-sm-4 col-6">
                   <a href="https://www.linkedin.com/in/abhijitpanigrahi/" target="_blank">
                       <div class="speaker-card">
-                          <img class="speaker-card-img-top" src="img/Abhijit_Panigrahi.jpg" alt="Abhijit Panigrahi">
+                          <img class="speaker-card-img-top" src="img/Khagendra-Kumar.jpg" alt="Khagendra Kumar">
                           <div class="speaker-card-body">
                               <div class="speaker-card-header">
-                                  <h5>Abhijit Panigrahi</h5>
-                                  <p class="text-faded">Chief Mentor
-                                      <br />Invincix Solutions</p>
+                                  <h5>Khagendra Kumar</h5>
+                                  <p class="text-faded">Community Manager
+                                      <br />Unity/p>
                               </div>
                           </div>
                       </div>
                   </a>
               </div>
+
+              
+              <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+                <a href="https://www.linkedin.com/in/itskhagendra" target="_blank">
+                    <div class="speaker-card">
+                        <img class="speaker-card-img-top" src="img/Abhijit_Panigrahi.jpg" alt="Abhijit Panigrahi">
+                        <div class="speaker-card-body">
+                            <div class="speaker-card-header">
+                                <h5>Abhijit Panigrahi</h5>
+                                <p class="text-faded">Chief Mentor
+                                    <br />Invincix Solutions</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
 
 <!-- 
                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
