--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
                           <div class="speaker-card-header">
                               <h5>Khagendra Kumar</h5>
                               <p class="text-faded">Community Manager
-                                  <br />Unity/p>
+                                  <br />Unity</p>
                           </div>
                       </div>
                   </div>
